@@ -40,103 +40,8 @@ class ListViewPresenterTests(unittest.TestCase):
         now_at   = datetime.datetime.now()
 
         presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-        self.assertEqual(presenter.title, 'August 2009')
+        self.assertEqual(presenter.title, 'Upcoming Events')
 
-    # first & last moment
-
-    def test_computes_first_moment_within_current_month_only(self):
-        focus_at = datetime.datetime(2009, 8, 26)
-        now_at   = datetime.datetime.now()
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        expected = datetime.datetime(2009, 8, 1, 0, 0, 0)
-        self.assertEqual(presenter.first_moment, expected)
-
-    def test_computes_last_moment_within_current_month_only(self):
-        focus_at = datetime.datetime(2009, 8, 26)
-        now_at   = datetime.datetime.now()
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        expected = datetime.datetime(2009, 8, 31, 23, 59, 59)
-        self.assertEqual(presenter.last_moment, expected)
-
-    # prev_datetime & next_datetime 
-    
-    def test_computes_prev_datetime_preserving_day_if_in_range(self):
-        focus_at = datetime.datetime(2009, 8, 31)
-        now_at   = datetime.datetime.now()
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        self.assertEqual(presenter.prev_datetime.year, 2009)
-        self.assertEqual(presenter.prev_datetime.month, 7)
-        self.assertEqual(presenter.prev_datetime.day, 31)
-        
-    def test_computes_prev_datetime_adjusting_out_of_range_day(self):
-        focus_at = datetime.datetime(2009, 7, 31) # 31 not in june
-        now_at   = datetime.datetime.now()
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        self.assertEqual(presenter.prev_datetime.year, 2009)
-        self.assertEqual(presenter.prev_datetime.month, 6)
-        self.assertEqual(presenter.prev_datetime.day, 30) # adjusted
-
-    def test_computes_next_datetime_preserving_day_if_in_range(self):
-        focus_at = datetime.datetime(2009, 7, 31) 
-        now_at   = datetime.datetime.now()
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        self.assertEqual(presenter.next_datetime.year, 2009)
-        self.assertEqual(presenter.next_datetime.month, 8)
-        self.assertEqual(presenter.next_datetime.day, 31) 
-
-    def test_computes_next_datetime_adjusting_out_of_range_day(self):
-        focus_at = datetime.datetime(2009, 8, 31) # 31 not in september
-        now_at   = datetime.datetime.now()
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        self.assertEqual(presenter.next_datetime.year, 2009)
-        self.assertEqual(presenter.next_datetime.month, 9)
-        self.assertEqual(presenter.next_datetime.day, 30) # adjusted
-
-    # left navigation
-    
-    def test_sets_navigation_today_url(self):
-        focus_at = datetime.datetime(2009, 11, 1) 
-        now_at   = datetime.datetime(2009, 8, 26)
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        self.assertTrue(presenter.navigation.today_url.endswith(
-            'list.html?year=2009&month=8&day=26'
-        ))
-
-    def test_sets_navigation_prev_url(self):
-        focus_at = datetime.datetime(2009, 8, 1) 
-        now_at   = datetime.datetime(2009, 8, 26)
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        self.assertTrue(presenter.navigation.prev_url.endswith(
-            'list.html?year=2009&month=7&day=1'
-        ))
-
-    def test_sets_navigation_next_url(self):
-        focus_at = datetime.datetime(2009, 8, 1) 
-        now_at   = datetime.datetime(2009, 8, 26)
-
-        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
-
-        self.assertTrue(presenter.navigation.next_url.endswith(
-            'list.html?year=2009&month=9&day=1'
-        ))
-
-       
     # helpers
 
     def _makeOne(self, *args, **kargs):
